# Invoicy

./: DOCKER_MIGRATION.md  Dockerfile  README.md  cloud_storage.py  deploy_flows.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  run_local.sh  run_production.sh  vector_db.py
.devcontainer/: devcontainer.json
notebooks/: parquet_embeddings_demo.py
prefect-flows/: invoice_pipeline.py  test_flow.py
src/models/: __init__.py
src/services/: cloud_storage.py  parquet_embeddings.py  prefect_integration.py  vector_db.py
tests/: test_connections.py
